--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<img src="/storage/emulated/0/DCIM/Screenshots/IMG_20250210_140845.jpg" alt="改接口已关闭">
+｛
+"ip"："ip归属地：贵州黔西南",
+"message"：网络不是法外之地
+"status"："改接口已关闭,你的IP设备已被记录"
+"status2"："Output successful"
+｝
