--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
-｛
-"ip"："ip归属地：贵州黔西南",
-"message"：网络不是法外之地
-"status"："改接口已关闭,你的IP设备已被记录"
-"status2"："Output successful"
-｝
+<!DOCTYPE html>
+<html>
+<head>
+    <title>文档内容</title>
+</head>
+<body>
+    <p>
+        {"ip":"ip归属地：贵州黔西南",<br>
+        "message": 网络不是法外之地,<br>
+        "status": "改接口已关闭,你的IP设备已被记录",<br>
+        "status2": "Output successful"}
+    </p>
+</body>
+</html>
